# audio-visualiser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  music-visualiser.mov
docs/: documentation.md  manual.md
frameworks/wxWidgets/: Makefile  config.status
frameworks/wxWidgets/.deps/: baselib_any.o.d  baselib_appbase.o.d  baselib_appunix.o.d  baselib_arcall.o.d  baselib_arcfind.o.d  baselib_archive.o.d  baselib_arrstr.o.d  baselib_base64.o.d  baselib_cfstring.o.d  baselib_clntdata.o.d  baselib_cmdline.o.d  baselib_cocoa_power.o.d  baselib_cocoa_stdpaths.o.d  baselib_cocoa_utils.o.d  baselib_common_secretstore.o.d  baselib_common_uilocale.o.d  baselib_config.o.d  baselib_convauto.o.d  baselib_core_mimetype.o.d  baselib_core_secretstore.o.d  baselib_core_uilocale.o.d  baselib_datetime.o.d  baselib_datetimefmt.o.d  baselib_datstrm.o.d  baselib_dircmn.o.d  baselib_dlunix.o.d  baselib_dynlib.o.d  baselib_dynload.o.d  baselib_encconv.o.d  baselib_epolldispatcher.o.d  baselib_event.o.d  baselib_evtloop_cf.o.d  baselib_evtloopcmn.o.d  baselib_evtloopunix.o.d  baselib_extended.o.d  baselib_fdiodispatcher.o.d  baselib_fdiounix.o.d  baselib_ffile.o.d  baselib_file.o.d  baselib_fileback.o.d  (+366 more)
frameworks/wxWidgets/demos/bombs/: Makefile
frameworks/wxWidgets/demos/forty/: Makefile
frameworks/wxWidgets/demos/fractal/: Makefile
frameworks/wxWidgets/demos/life/: Makefile
frameworks/wxWidgets/demos/poem/: Makefile
frameworks/wxWidgets/samples/animate/: Makefile
frameworks/wxWidgets/samples/archive/: Makefile
frameworks/wxWidgets/samples/artprov/: Makefile
frameworks/wxWidgets/samples/aui/: Makefile
frameworks/wxWidgets/samples/calendar/: Makefile
frameworks/wxWidgets/samples/caret/: Makefile
frameworks/wxWidgets/samples/clipboard/: Makefile
frameworks/wxWidgets/samples/collpane/: Makefile
frameworks/wxWidgets/samples/combo/: Makefile
frameworks/wxWidgets/samples/config/: Makefile
frameworks/wxWidgets/samples/console/: Makefile
frameworks/wxWidgets/samples/dataview/: Makefile
frameworks/wxWidgets/samples/debugrpt/: Makefile
frameworks/wxWidgets/samples/dialogs/: Makefile
frameworks/wxWidgets/samples/display/: Makefile
frameworks/wxWidgets/samples/dnd/: Makefile
frameworks/wxWidgets/samples/docview/: Makefile
frameworks/wxWidgets/samples/dragimag/: Makefile
frameworks/wxWidgets/samples/drawing/: Makefile
frameworks/wxWidgets/samples/erase/: Makefile
frameworks/wxWidgets/samples/event/: Makefile
frameworks/wxWidgets/samples/except/: Makefile
frameworks/wxWidgets/samples/exec/: Makefile
frameworks/wxWidgets/samples/font/: Makefile
frameworks/wxWidgets/samples/fswatcher/: Makefile
frameworks/wxWidgets/samples/grid/: Makefile
frameworks/wxWidgets/samples/help/: Makefile
frameworks/wxWidgets/samples/htlbox/: Makefile
frameworks/wxWidgets/samples/image/: Makefile
frameworks/wxWidgets/samples/internat/: Makefile
frameworks/wxWidgets/samples/ipc/: Makefile
frameworks/wxWidgets/samples/joytest/: Makefile
frameworks/wxWidgets/samples/keyboard/: Makefile
frameworks/wxWidgets/samples/layout/: Makefile
frameworks/wxWidgets/samples/listctrl/: Makefile
frameworks/wxWidgets/samples/mdi/: Makefile
frameworks/wxWidgets/samples/mediaplayer/: Makefile
frameworks/wxWidgets/samples/menu/: Makefile
frameworks/wxWidgets/samples/minimal/: Makefile
frameworks/wxWidgets/samples/notebook/: Makefile
frameworks/wxWidgets/samples/popup/: Makefile
frameworks/wxWidgets/samples/power/: Makefile
frameworks/wxWidgets/samples/preferences/: Makefile
frameworks/wxWidgets/tests/: Makefile
run/: build.sh  install.sh  linux.sh  macos.sh  run.sh  test.sh  windows.sh
src/: config.cpp  config.h
src/app/: App.cpp  App.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h  AudioUtil.h
src/config/: config.cpp  config.h
src/gui/: Visualiser.h  Window.cpp  Window.h
src/gui/visualisers/: Circular.h  Equalizer.h
src/gui/window/: Window.cpp  Window.h
src/utils/: Audio.h  Dialog.h  FFT.h  Frame.h  Visualiser.h
src/utils/audio/: Audio.cpp  Audio.h
src/utils/dialog/: Dialog.cpp  Dialog.h
src/utils/frame/: Frame.cpp  Frame.h
src/utils/observer/: Observer.cpp  Observer.h
src/utils/time/: Time.cpp  Time.h
src/utils/visualiser/: Visualiser.cpp  Visualiser.h
src/window/: Window.cpp  Window.h
(+65 files in other folders)
